# MyLibs

./: CMakeLists.txt  README.md  clionTutorial.md  gitinfo  t.cpp  t.hpp  tt.cpp  tt.hpp
apps/: CMakeLists.txt
apps/cmake/cmake_functions/functions/: CMakeLists.txt
apps/xcards/: CMakeLists.txt
apps/xcards/include/xcards/: xcards.hpp
apps/xcards/src/: main.cpp  main.qml  pch.pch  qml.qrc  xcards.cpp
apps/xcards_server/: CMakeLists.txt
apps/xcards_server/src/: main.cpp  pch.pch
cmake/cmake_functions/: CMakeLists.txt
cmake/cmake_functions/functions/: CMakeLists.txt
docs/: Doxyfile.in
libs/: CMakeLists.txt  README.md
libs/cmake/cmake_functions/functions/: CMakeLists.txt
libs/ph/: CMakeLists.txt
libs/ph/cmake/cmake_functions/functions/: CMakeLists.txt
libs/ph/include/ph/: ph.hpp
libs/ph/libs/algorithms/: CMakeLists.txt
libs/ph/libs/algorithms/docs/: Doxyfile.in
libs/ph/libs/algorithms/include/ph/algorithms/: algorithms.hpp  test.hpp
libs/ph/libs/algorithms/src/: algorithms.cpp  pch.pch  test.cpp
libs/ph/libs/algorithms/test/include/test/: main.hpp
libs/ph/libs/algorithms/test/src/: main.cpp
libs/ph/libs/aspects/: CMakeLists.txt
libs/ph/libs/aspects/docs/: Doxyfile.in
libs/ph/libs/aspects/include/ph/aspects/: aspects.hpp  test.hpp
libs/ph/libs/aspects/src/: aspects.cpp  pch.pch  test.cpp
libs/ph/libs/aspects/test/include/test/: main.hpp
libs/ph/libs/aspects/test/src/: main.cpp
libs/ph/libs/authentication/: CMakeLists.txt
libs/ph/libs/authentication/include/ph/authentication/: AbstractAuthenticator.hpp  AbstractAuthenticatorState.hpp  Authenticator.hpp  AuthenticatorState.hpp
libs/ph/libs/authentication/src/: common.hpp
libs/ph/libs/authentication/test/src/: pch.pch
libs/ph/libs/core/: CMakeLists.txt  README.md
libs/ph/libs/core/docs/: Doxyfile.in  README.md
libs/ph/libs/core/include/ph/core/: core.hpp  test.hpp
libs/ph/libs/core/src/: core.cpp  pch.pch  test.cpp
libs/ph/libs/core/test/include/test/: main.hpp
libs/ph/libs/core/test/src/: main.cpp
libs/ph/libs/data_structures/: CMakeLists.txt  README.md
libs/ph/libs/data_structures/docs/: Doxyfile.in
libs/ph/libs/data_structures/include/ph/data_structures/: data_structures.hpp  linked_list.hpp  queue.hpp  stack.hpp  test.hpp
libs/ph/libs/data_structures/src/: data_structures.cpp  pch.pch  test.cpp
libs/ph/libs/data_structures/test/include/test/: main.hpp
libs/ph/libs/data_structures/test/src/: main.cpp
libs/ph/libs/math/: CMakeLists.txt
libs/ph/libs/math/include/ph/math/: math.hpp  matrix.hpp  point.hpp  test.hpp  vector.hpp
libs/ph/libs/math/src/: math.cpp  pch.pch  test.cpp
libs/ph/libs/math/test/include/test/: main.hpp
libs/ph/libs/math/test/src/: main.cpp  pch.pch
libs/ph/libs/metaprogramming/: CMakeLists.txt
libs/ph/libs/metaprogramming/docs/: Doxyfile.in
libs/ph/libs/metaprogramming/include/ph/metaprogramming/: metaprogramming.hpp  test.hpp  typelist.hpp
libs/ph/libs/metaprogramming/src/: metaprogramming.cpp  pch.pch  test.cpp
libs/ph/libs/metaprogramming/test/src/: main.cpp  pch.pch
libs/ph/libs/networking/: CMakeLists.txt
libs/ph/libs/networking/include/ph/networking/: networking.hpp
libs/ph/libs/networking/src/: networking.cpp  pch.pch
libs/ph/libs/time/: CMakeLists.txt
libs/ph/libs/time/libs/date/: CMakeLists.txt
libs/ph/libs/time/libs/date/include/ph/time/date/: Date.hpp  Day.hpp  Hour.hpp  Minute.hpp  Month.hpp  Second.hpp  Year.hpp
libs/ph/libs/time/libs/date/src/: Date.cpp  Day.cpp  Hour.cpp  Minute.cpp  Month.cpp  Second.cpp  Year.cpp
libs/ph/libs/time/libs/timer/: CMakeLists.txt
libs/ph/libs/time/libs/timer/include/ph/time/timer/: T.hpp  Timer.hpp
libs/ph/libs/time/libs/timer/src/: Timer.cpp
libs/ph/libs/time/src/: time.cpp
libs/ph/libs/utility/: CMakeLists.txt
libs/ph/libs/utility/include/ph/utility/: iteratorFacade.hpp  utility.hpp
libs/ph/libs/utility/src/: pch.pch  utility.cpp
libs/ph/libs/utility/test/src/: main.cpp
libs/ph/libs/vulkan/: CMakeLists.txt
libs/ph/libs/vulkan/include/ph/vulkan/: Tuple.hpp  Vector.hpp  info.hpp  support.hpp
libs/ph/libs/vulkan/src/: Tuple.cpp  Vector.cpp  _support.hpp  info.cpp  pch.pch  support.cpp
libs/ph/libs/vulkan/src/t/: support.cpp
libs/ph/libs/vulkan/test/src/: main.cpp
libs/ph/src/: ph.cpp
libs/ph/test/include/test/: machine.hpp  pill.hpp  product.hpp  station.hpp
libs/ph/test/src/: machine.cpp  main.cpp  pill.cpp  product.cpp  station.cpp
libs/ph/testing/: CMakeLists.txt
libs/ph/testing/docs/: Doxyfile.in
libs/ph/testing/include/ph/testing/: test.hpp  testing.hpp
libs/ph/testing/src/: pch.pch  test.cpp  testing.cpp
libs/ph/testing/test/src/: main.cpp
